<resources>
    <string name="app_name">Gimnasio_FCT</string>
    <string name="lblEmail">Email</string>
    <string name="lblPassword">Contraseña</string>
    <string name="btnCuenta">Iniciar Sesión</string>
    <string name="ImgView">TODO</string>
    <string name="txtmonitores">Monitor</string>
    <string name="txtclientes">Cliente</string>
    <string name="btnAltaSalas">AltaSala</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failedq</string>
    <string name="txt_Menu">Menu</string>
    <string name="txt_aforo">Aforo</string>
    <string name="txt_dimension">dimension</string>
    <string name="txt_descripcion">descripciom</string>
    <string name="txt_Inventario">Inventario</string>
    <string name="txt_Salas">Salas</string>
    <string name="txt_Horario">Horario</string>
    <string name="txt_Actividades">Actividades</string>
    <string name="txt_Atras">Atras</string>
    <string name="lblNombre">Nombre</string>
    <string name="btnanadir">Añadir</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="txttipo">Tipo</string>
    <string name="txtDescripcion">Descripción</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtDNI">DNI</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtCorreo">Correo</string>
    <string name="txtSexo">Sexo</string>
    <string name="txtTarifa">Tarifa</string>
    <string name="txtFechaA">Fecha de Alta</string>
    <string name="txtFechaB">Fecha de Baja</string>
    <string name="txtContrato">Contrato</string>
    <string name="txtMarca">Marca</string>
    <string name="txtModelo">Modelo</string>
    <string name="txtPrecio">Precio</string>
    <string name="txtMenuPrincipal">MenuPrincipal</string>
    <string name="txtAltaCL">AltaCL</string>
    <string name="btnGuardar">Guardar</string>
    <string name="RBMasculino">Masculino</string>
    <string name="RBFemenino">Femenino</string>
    <string name="btnEliminar">Eliminar</string>

    <string-array name="diasdelasemana">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>

</resources>